--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://visualcomputing.github.io/showcase"
+baseURL = "https://compuvisual2023i.github.io/showcase"
 languageCode = "en-us"
 title = "Showcase Template"
 theme = 'book'
@@ -22,7 +22,7 @@ enableGitInfo = true
 
   # Set source repository location.
   # Used for 'Last Modified' and 'Edit this page' links.
-  BookRepo = 'https://github.com/visualcomputing/showcase'
+  BookRepo = 'https://github.com/compuvisual2023i/showcase'
 
   # Configure the date format used on the pages
   # - In git information
