template inicial del grupo

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://compuvisual2023i.github.io/showcase"
 languageCode = "en-us"
-title = "Showcase Template"
+title = "Computación Visual 2023-I"
 theme = 'book'
 
 # Book configuration
